# proto_cea

./: .gitignore  Readme.md  auto_push.sh  remote_config.yaml  requirement.txt  requirements.txt
designs_draft_search/: ct2-models.py  spacy_import.py  stanza_import.py  stanza_lstm_desing.py  trankit-tes.py
proto/: tok_and_DM.py
tests/inference/: proto_model.h
tests/training/: CMakeLists.txt  load_nllb.py  onmt_tuto_config.yaml  pos_tagg_dep_trankit.py  test_Nllb_tok.py  test_adapter.py  test_encoder.py  test_mininetwork.py  test_onmt.py  test_onmt.sh  test_tok_and_DM.py  testsdeclasses.py  tpipe_trained.py  train_trankit.yaml  training_liketrankit.py
tests/training/onmt/: net.yaml
tests/training/test_jit/: MiniNetwork.cpp
training/: build_dataset.py  onmt_config.py  onmt_config.yaml  onmt_training.sh  test_onmt_config.yaml  tok_and_DM_train.py  train_xlmR_model.py  var_utils.py  xlm_rboerta.py  xlmr_model.py
training/onmt_enc-dec/: nllb_encoder.py  posdepclassifier.py  xlmr_encoder.py  xlmradapted.py
training/v1/: onmt_config_v1.yaml  onmt_training_v1.sh  onmt_tuto_config.yaml  train_xlmr_v1.py  xlmr_model_v1.py
training/v2/: local_config.yaml  onmt_perso.py  onmt_tuto_config.yaml  parser_test.sh  trainset.py
trankit.egg-info/: PKG-INFO  SOURCES.txt
utils/python/: Dozat&Manning.py  Dozat_Manning.py  KbInterruptHandler.py  utils.py
~/.cache/torch/adapters/d57e64108b16cabe53f6850f57aa2ad957025d90db6a12e7ffb7ae2cd4a9580f-a851b3299fbb0b8eab7d7094ee6a2b582bf0dd356284f53dd4406ec5ca8e8c2f-extracted/: ._adapter_config.json  adapter_config.json
